lock the version of grunt-urequire to 0.6.0

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-util-options": "0.0.2",
     "grunt-exec": "~0.4.2",
     "grunt-git-describe": "~2.3.2",
-    "grunt-urequire": "~0.6.0"
+    "grunt-urequire": "0.6.0"
   },
   "engines": {
     "node": ">=0.6.0"
